Add explicit module exports parameters to JVM